--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,9 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="18"/>
+    <uses-permission android:name="android.permission.camera" />
+    <uses-feature android:name="android.hardware.camera"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".CrimeListActivity">
             <intent-filter>
@@ -16,5 +19,9 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".CrimeListActivity"/>
          </activity>
+        <activity android:name=".CrimeCameraActivity"
+                  android:screenOrientation="landscape"
+                  android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
